--- a/.github/workflows/basic2.yml
+++ b/.github/workflows/basic2.yml
@@ -6,4 +6,4 @@ jobs:
     runs-on: self-hosted
     steps:
       - uses: actions/checkout@v3
-      - run: ansible-playbook basic.yml
+      - run: ansible-playbook -i inventory.yml basic.yml
