--- a/inventory.yml
+++ b/inventory.yml
@@ -1,11 +1,12 @@
 all:
   children:
     Homelab:
-      local:
-        ansible_host: 10.10.10.3
-        ansible_user: jonezy
-        ansible_ssh_private_key_file: ~/.ssh/id_rsa
-      remote:
-        ansible_host: 10.10.10.75
-        ansible_user: jonezy
-        ansible_ssh_private_key_file: ~/.ssh/id_rsa
+      hosts:
+        local:
+          ansible_host: 10.10.10.3
+          ansible_user: jonezy
+          ansible_ssh_private_key_file: ~/.ssh/id_rsa
+        remote:
+          ansible_host: 10.10.10.75
+          ansible_user: jonezy
+          ansible_ssh_private_key_file: ~/.ssh/id_rsa
