--- a/basic.yml
+++ b/basic.yml
@@ -1,9 +1,10 @@
 --- 
 - name: basic
   hosts: all
-  gather_facts: true
+  gather_facts: false
 
   tasks:
     - name: debug
       ansible.builtin.debug: 
         var: ansible_os_family
+      when: ansible_os_family == "Debian"
